--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             >
           </li>
 
-          <li class="nav__link click">
+          <li class="nav__link click" onclick="toggleContrast()">
             <a
               href="#"
               class="nav__link--anchor 
@@ -110,7 +110,7 @@
           </div>
         </div>
       </header>
-      <button class="mail__btn click">
+      <button class="mail__btn click" onclick="toggleModal()">
         <i class="fa-solid fa-envelope"></i>
       </button>
       <a href="#projects" class="scroll">
@@ -154,21 +154,21 @@
       <h3 class="modal__subtitle modal__subtitle--contact">
         I am currently open to new opportunities.  
       </h3>
-      <form action="contact__form" onsubmit="contact(event)">
+      <form action="contact__form" onsubmit=" contact(event)">
         
         <div class="form__item">
           <label class="form__item--label">Name</label>
-          <input class="input" name="user__name" type="text" required></input>
+          <input class="input" name="user_name" type="text"></input>
         </div>
 
         <div class="form__item">
           <label class="form__item--label">E-Mail</label>
-          <input class="input" name="user__email" type="email" required></input>
+          <input class="input" name="user_email" type="email"></input>
         </div>
 
         <div class="form__item">
           <label class="form__item--label">Message</label>
-          <textarea class="input" name="message" type="text" required></textarea>
+          <textarea class="input" name="message" type="text"></textarea>
         </div>  
         <button id="contact__submit" class="form__submit">
         Send it my way
@@ -182,6 +182,17 @@
       </div>
     <i class="fas fa-times modal__exit click"></i>
     </div>
+<img src="./assets/semi circle.svg" class="shape shape--0">
+<img src="./assets/circle.svg" class="shape shape--1">
+<img src="./assets/squiggly.svg" class="shape shape--2">
+<img src="./assets/circle.svg" class="shape shape--3">
+<img src="./assets/triangle.svg" class="shape shape--4">
+<img src="./assets/circle.svg" class="shape shape--5">
+<img src="./assets/squiggly.svg" class="shape shape--6">
+<img src="./assets/circle.svg" class="shape shape--7">
+<img src="./assets/semi circle.svg" class="shape shape--8">
+
+
     </section>
 
     <section id="projects">
