Picard Earl Grey Tea Hot

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
   </head>
   <body>
-    <section id="landing-page">
+    <section id="landing-page" onmousemove="moveBackground(event)">
       <nav>
         <figure>
-          <img id="personal-logo" src="./assets/Autumn Birch.jpg" alt="" />
+          <img id="personal-logo" src="./assets/Autumn Birch.jpg" alt="">
         </figure>
         <ul class="nav__link--list">
           <li class="nav__link">
@@ -51,7 +51,7 @@
             >
           </li>
 
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor 
@@ -81,7 +81,7 @@
             strong passion for building web applications with great user
             experiences.
             <br />
-            Here's a bit<b class="identity"> more about me.</b>
+            Here's a bit<b class="identity click" onclick="toggleModal()"> more about me.</b>
           </p>
           <div class="social__list">
             <a
@@ -148,6 +148,7 @@
       </div>
       </div>
       <div class="modal__half modal__contact">
+        <i class="fas fa-times modal__exit click" onclick="toggleModal()"></i>
         <h3 class="modal__title modal__title--contact">
         Let's have a chat!
       </h3>
@@ -158,17 +159,17 @@
         
         <div class="form__item">
           <label class="form__item--label">Name</label>
-          <input class="input" name="user_name" type="text"></input>
+          <input class="input" name="user_name" type="text" required></input>
         </div>
 
         <div class="form__item">
           <label class="form__item--label">E-Mail</label>
-          <input class="input" name="user_email" type="email"></input>
+          <input class="input" name="user_email" type="email" required></input>
         </div>
 
         <div class="form__item">
           <label class="form__item--label">Message</label>
-          <textarea class="input" name="message" type="text"></textarea>
+          <textarea class="input" name="message" type="text" required></textarea>
         </div>  
         <button id="contact__submit" class="form__submit">
         Send it my way
@@ -180,8 +181,7 @@
        <div class="modal__overlay modal__overlay--success">Thanks for the message.  Looking forward to speaking to you soon. 
        </div>
       </div>
-    <i class="fas fa-times modal__exit click"></i>
-    </div>
+       </div>
 <img src="./assets/semi circle.svg" class="shape shape--0">
 <img src="./assets/circle.svg" class="shape shape--1">
 <img src="./assets/squiggly.svg" class="shape shape--2">
