--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
           </div>
         </div>
       </header>
+      <a href="#"></a>
       <button class="mail__btn click" onclick="toggleModal()">
         <i class="fa-solid fa-envelope"></i>
       </button>
@@ -336,7 +337,7 @@
         </a>
         
         <a
-        href="#"
+        href="#" onclick="toggleModal()"
         class="footer__social--link 
         link__hover-effect 
         link__hover-effect--white"
